fix it broken when too small
thanks OwO

--- a/css/addons/frostedglass/Aurorafy.css
+++ b/css/addons/frostedglass/Aurorafy.css
@@ -1092,6 +1092,7 @@ div[style*="width: 100%; height: 20px"] {
 
 .standardSidebarView-3F1I7i .sidebarRegion-VFTUkN, .standardSidebarView-3F1I7i .sidebarRegion-VFTUkN .sidebarRegionScroller-3MXcoP {
     justify-content: flex-start;
+    min-width: 200px;
 }
 .sidebarRegion-VFTUkN {
     -ms-flex: 0;
